src/css/index.css
@import 'globals.css';
@import 'buttons.css';
@import 'containers.css';
@import 'grids.css';
@import 'input.css';
@import 'overlay-form.css';

/* DEBUG &::after {
  content:"";
  position: absolute;
  z-index: 1;
  top: 0;
  bottom: 0;
  left: 50%;
  border-left: 2px dotted #ff0000;
} */

body {
  display: flex;
  flex-direction: column;
  font: 1rem var(--font-mono);
  font-weight: 400;
  margin: 10px 20px 0px 20px;
  color: var(--foreground-color);
  background-color: var(--background-color);
  white-space: pre-wrap;
  min-height: calc(100vh - 10px);
  min-width: 370px;
  width: auto !important;
  width: 370px;
}

footer {
  background-color: var(--color-black);
  margin: 0px -20px;
  margin-top: auto;
  padding-bottom: 40px;
}

input,
textarea,
button,
select,
a {
    -webkit-tap-highlight-color: rgb(0, 0, 0, 0);
}

h1 {
  display: flex;
  justify-content: center;
  font-size: 2.5rem;
  color: #ffffff;
  background-color: var(--color-mainblue);
  letter-spacing: 3px;
  font-weight: bold;
  text-align: center;
  padding: 10px 20px;
  margin-top: 0px;
  margin-bottom: 10px;
  border-radius: var(--border-radius);
  min-width: fit-content;
  &::selection {
    color: var(--color-mainblue);
    background-color: #ffffff;
  }
}

@media only screen and (max-width: 600px) {
  h1 {
    font-size: 1.5rem;
    padding: 5px 10px;
  }
}

h2 {
  color: var(--foreground-color);
  font-weight: bold;
  text-align: center;
  padding: 8px 16px;
  margin: 10px 0;
}

h3 {
  color: var(--foreground-color);
  font-weight: bold;
  text-align: center;
  padding: 6px 12px;
  padding-top: 20px;
  margin: 10px 0;
}

table {
  background-color: var(--color-blue);
  color: var(--color-white);
  border-collapse: collapse;
  margin: 10px;
}

th, td {
  padding: 2px 12px;
  border: 2px solid var(--color-white);
}

.main {
  text-align: center;
  width: 100%;
  height: 100%;
  margin: 0 auto;
  margin-bottom: 40px;
}

